Added Model for Classification

--- a/notebook/CreatingData.ipynb
+++ b/notebook/CreatingData.ipynb
@@ -3,55 +3,228 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96f38671",
+   "id": "619390b0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/data/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-a7d99e28ae6e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/data/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/data/'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
+    "import pandas as pd\n",
     "os.chdir(\"../\")\n",
-    "os.chdir(\"/data/\")"
+    "os.chdir(\"data\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33c51230",
+   "id": "5ef109da",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/rohith/Documents/College/Semester 4/IBS/ChaosGameRepresentation_BioSeq'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.getcwd()"
+    "import collections\n",
+    "from collections import OrderedDict\n",
+    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "import pylab\n",
+    "import math\n",
+    "import numpy as np\n",
+    "plt.ioff()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "278db7e5",
+   "execution_count": 3,
+   "id": "e0cbb635",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "30ba5031",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CGR():\n",
+    "    K = 0\n",
+    "    c = None\n",
+    "    h = \"\"\n",
+    "    Data = \"\"\n",
+    "    i = 0\n",
+    "    def __init__(self,a):\n",
+    "        self.i=a\n",
+    "        \n",
+    "    def read_fasta(self,loc):\n",
+    "        f = open(loc)\n",
+    "        s1 = f.read()\n",
+    "        data = \"\".join(s1.split(\"\\n\")[1:])\n",
+    "        head = \"\".join(s1.split(\"\\n\")[0:1])\n",
+    "        return data,head\n",
+    "    \n",
+    "    def count_kmers(self,sequence, k):\n",
+    "        d = collections.defaultdict(int)\n",
+    "        for i in range(len(self.Data)-(k-1)):\n",
+    "            d[sequence[i:i+k]] +=1\n",
+    "        d.pop(\"N\",None)\n",
+    "        return d\n",
+    "\n",
+    "    def probabilities(self,kmer_count, k):\n",
+    "        probabilities = collections.defaultdict(float)\n",
+    "        N = len(self.Data)\n",
+    "        for key, value in kmer_count.items():\n",
+    "            probabilities[key] = float(value) / (N - k + 1)\n",
+    "        return probabilities\n",
+    "\n",
+    "    def chaos_game_representation(self,probabilities, k):\n",
+    "        array_size = int(math.sqrt(4**k))\n",
+    "        chaos = []\n",
+    "        for i in range(array_size):\n",
+    "            chaos.append([0]*array_size)\n",
+    "        maxx = array_size\n",
+    "        maxy = array_size\n",
+    "        posx = 1\n",
+    "        posy = 1\n",
+    "        for key, value in probabilities.items():\n",
+    "            for char in key:\n",
+    "                if char == \"T\":\n",
+    "                    posx +=  maxx/2\n",
+    "                elif char == \"C\":\n",
+    "                    posy += maxy/2\n",
+    "                elif char == \"G\":\n",
+    "                    posx += maxx/2\n",
+    "                    posy += maxy/2\n",
+    "                maxx /= 2\n",
+    "                maxy /= 2\n",
+    "\n",
+    "            chaos[int(posy-1)][int(posx-1)] = value\n",
+    "            maxx = array_size\n",
+    "            maxy = array_size\n",
+    "            posx = 1\n",
+    "            posy = 1\n",
+    "        m = float(np.amax(chaos))\n",
+    "        c = np.array(chaos)/m\n",
+    "        return c\n",
+    "\n",
+    "    def load_fasta(self,loc,k):\n",
+    "        data,head = self.read_fasta(loc)\n",
+    "        self.Data = data\n",
+    "        f4 = self.count_kmers(data, k)\n",
+    "        f4_prob = self.probabilities(f4, k)\n",
+    "        chaos_k4 = self.chaos_game_representation(f4_prob, k)\n",
+    "        self.c = chaos_k4\n",
+    "        self.h = head\n",
+    "        return chaos_k4\n",
+    "    \n",
+    "    def read(self,data,head,k):\n",
+    "        #data,head = self.read_fasta(loc)\n",
+    "        self.Data = data\n",
+    "        f4 = self.count_kmers(data, k)\n",
+    "        f4_prob = self.probabilities(f4, k)\n",
+    "        chaos_k4 = self.chaos_game_representation(f4_prob, k)\n",
+    "        self.c = chaos_k4\n",
+    "        self.h = head\n",
+    "        return chaos_k4\n",
+    "    \n",
+    "    def show(self):\n",
+    "        plt.figure(figsize=(12,12))\n",
+    "        plt.title('CGR of '+str(self.K)+'-mers for '+self.h[2:])\n",
+    "        plt.pcolor(self.c,cmap=cm.gray_r)#,interpolation = \"spline36\")\n",
+    "        #pylab.savefig(str(self.i)+\".PNG\")\n",
+    "        plt.show()\n",
+    "    \n",
+    "    def show_v2(self):\n",
+    "        fig = plt.figure(figsize=(12,12))\n",
+    "        plt.imshow(self.c, cmap=cm.gray_r)#,interpolation = \"spline36\")\n",
+    "        plt.savefig(str(self.i)+\".png\",bbox_inches='tight')\n",
+    "        plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "feef033a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oslist = os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a461a993",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 72%|███████▏  | 21/29 [00:04<00:01,  4.58it/s]<ipython-input-4-aed6903be4ec>:89: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  fig = plt.figure(figsize=(12,12))\n",
+      "100%|██████████| 29/29 [00:06<00:00,  4.76it/s]\n",
+      "100%|██████████| 470/470 [01:56<00:00,  4.04it/s]\n",
+      "100%|██████████| 53/53 [00:13<00:00,  3.80it/s]\n",
+      "100%|██████████| 198/198 [00:54<00:00,  3.61it/s]\n",
+      "100%|██████████| 500/500 [01:53<00:00,  4.41it/s]\n",
+      "100%|██████████| 20/20 [00:05<00:00,  3.67it/s]\n",
+      "100%|██████████| 20/20 [00:04<00:00,  4.20it/s]\n",
+      "100%|██████████| 20/20 [00:04<00:00,  4.16it/s]\n",
+      "100%|██████████| 125/125 [00:31<00:00,  4.01it/s]\n",
+      "100%|██████████| 126/126 [00:32<00:00,  3.84it/s]\n",
+      "100%|██████████| 121/121 [00:29<00:00,  4.05it/s]\n",
+      "100%|██████████| 122/122 [00:30<00:00,  4.04it/s]\n",
+      "100%|██████████| 403/403 [01:14<00:00,  5.44it/s]\n",
+      "100%|██████████| 500/500 [02:23<00:00,  3.50it/s]\n",
+      "100%|██████████| 210/210 [00:52<00:00,  3.96it/s]\n",
+      "100%|██████████| 20/20 [00:04<00:00,  4.51it/s]\n",
+      "100%|██████████| 49/49 [00:11<00:00,  4.40it/s]\n",
+      "100%|██████████| 49/49 [00:12<00:00,  4.00it/s]\n",
+      "100%|██████████| 222/222 [00:55<00:00,  4.03it/s]\n",
+      "100%|██████████| 9/9 [00:02<00:00,  4.30it/s]\n",
+      "100%|██████████| 499/499 [02:07<00:00,  3.92it/s]\n",
+      "100%|██████████| 115/115 [00:29<00:00,  3.83it/s]\n",
+      "100%|██████████| 18/18 [00:04<00:00,  4.01it/s]\n",
+      "100%|██████████| 18/18 [00:04<00:00,  3.94it/s]\n",
+      "100%|██████████| 102/102 [00:25<00:00,  4.04it/s]\n",
+      "100%|██████████| 10/10 [00:02<00:00,  3.74it/s]\n",
+      "100%|██████████| 10/10 [00:02<00:00,  3.75it/s]\n",
+      "100%|██████████| 233/233 [01:00<00:00,  3.84it/s]\n",
+      "100%|██████████| 369/369 [01:38<00:00,  3.76it/s]\n",
+      "100%|██████████| 182/182 [00:46<00:00,  3.95it/s]\n",
+      "100%|██████████| 166/166 [00:41<00:00,  4.02it/s]\n",
+      "100%|██████████| 107/107 [00:27<00:00,  3.88it/s]\n",
+      "100%|██████████| 436/436 [01:46<00:00,  4.10it/s]\n",
+      "100%|██████████| 304/304 [01:21<00:00,  3.73it/s]\n",
+      "100%|██████████| 144/144 [00:40<00:00,  3.54it/s]\n",
+      "100%|██████████| 196/196 [00:52<00:00,  3.76it/s]\n",
+      "100%|██████████| 192/192 [00:51<00:00,  3.70it/s]\n",
+      "100%|██████████| 47/47 [00:12<00:00,  3.81it/s]\n",
+      "100%|██████████| 47/47 [00:12<00:00,  3.78it/s]\n",
+      "100%|██████████| 47/47 [00:14<00:00,  3.26it/s]\n",
+      "100%|██████████| 133/133 [00:36<00:00,  3.61it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in oslist:\n",
+    "    if (i.split('.')[-1]=='xlsx'):\n",
+    "        x = pd.read_excel(i,engine = 'openpyxl',header=None)\n",
+    "        acc = x[0].values.tolist()\n",
+    "        seq = x[1].values.tolist()\n",
+    "        di = i.split('.')[0]\n",
+    "        os.makedirs(di)\n",
+    "        os.chdir(di)\n",
+    "        for b in tqdm(range(len(acc))):\n",
+    "            try:\n",
+    "                a = CGR(acc[b].replace(',',\"\").replace('.',\"\"))\n",
+    "                a.read(seq[b],acc[b],7)\n",
+    "                a.show_v2()\n",
+    "            except:\n",
+    "                continue\n",
+    "        os.chdir('..')"
+   ]
   }
  ],
  "metadata": {
