--- a/notebook/classification.ipynb
+++ b/notebook/classification.ipynb
@@ -337,8 +337,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-06-16T19:32:08.062866Z",
@@ -348,7 +347,6 @@
     },
     "id": "QR6argA1K074"
    },
-   "outputs": [],
    "source": [
     "num_classes = len(class_names)\n",
     "\n",
@@ -370,6 +368,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_classes = len(class_names)\n",
+    "\n",
+    "model = Sequential([\n",
+    "    layers.Conv2D(filters=96, kernel_size=(11,11), strides=(4,4), activation='relu', input_shape=(img_height,img_width,3)),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
+    "    layers.Conv2D(filters=256, kernel_size=(5,5), strides=(1,1), activation='relu', padding=\"same\"),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
+    "    layers.Conv2D(filters=384, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.Conv2D(filters=384, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.Conv2D(filters=256, kernel_size=(3,3), strides=(1,1), activation='relu', padding=\"same\"),\n",
+    "    layers.BatchNormalization(),\n",
+    "    layers.MaxPool2D(pool_size=(3,3), strides=(2,2)),\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(4096, activation='relu'),\n",
+    "    layers.Dropout(0.5),\n",
+    "    layers.Dense(4096, activation='relu'),\n",
+    "    layers.Dropout(0.5),\n",
+    "    layers.Dense(num_classes, activation='softmax')\n",
+    "])\n",
+    "model.compile(loss='sparse_categorical_crossentropy', optimizer=tf.optimizers.SGD(lr=0.001), metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "execution": {
@@ -386,7 +416,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      " 98/132 [=====================>........] - ETA: 57s - loss: 4.0122 - accuracy: 0.0810"
+      "  5/132 [>.............................] - ETA: 20:03 - loss: 7.9822 - accuracy: 0.0061  "
      ]
     }
    ],
@@ -456,6 +486,18 @@
     "    \"This image most likely belongs to {} with a {:.2f} percent confidence.\"\n",
     "    .format(class_names[np.argmax(score)], 100 * np.max(score))\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('../')\n",
+    "os.chdir('../')\n",
+    "os.chdir('model')\n",
+    "model.save(\"Classify_v1\")"
    ]
   }
  ],
